# client-icap

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  client.cpp  client.h  common.cpp  common.h  connection.cpp  connection.h  headers.h  icap.h  request.cpp  request.h  response.cpp  response.h  url.cpp  url.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_url.cpp
